# GitRelations

./: .desktop  .gitignore  CMakeLists.txt  Doxyfile  FindGraphviz.cmake  FindLibgit2.cmake  FindLibgitcpp.cmake  GitRelations.pro  README  contributer.cpp  contributer.h  contributerwindow.cpp  contributerwindow.h  contributerwindow.ui  forcelayout.cpp  forcelayout.h  graphicsviewzoom.cpp  graphicsviewzoom.h  leafnode.cpp  leafnode.h  macros.cpp  macros.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h  paintwindow.cpp  paintwindow.h  paintwindow.ui  relation.h  repositorywidget.cpp  repositorywidget.h  repositorywidget.ui  tooltip.cpp  tooltip.h  treenode.cpp  treenode.h  zoomgraphicsscene.h
libgitcpp/: .gitignore  CMakeLists.txt  Doxyfile  INSTALL
libgitcpp/include/: Commit.h  CommitIterator.h  CommitX.h  Diff.h  FileStat.h  GitException.h  Oid.h  Reference.h  Repository.h  Signature.h  error.h
libgitcpp/src/: Commit.cpp  CommitIterator.cpp  CommitX.cpp  Diff.cpp  Oid.cpp  Reference.cpp  Repository.cpp  Signature.cpp
libgitcpp/test/: commit.cpp  diff.cpp  iterator.cpp  oid.cpp
